--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -18,3 +18,23 @@ body {
   max-width: 320px;
   margin-bottom: 16px;
 }
+
+#search-box:focus-within {
+   background-color: rgb(238, 224, 226);
+}
+
+.country-list {
+  list-style: none;
+  padding-left: 0;
+}
+
+.box {
+  display: flex;
+  gap: 20px;
+  margin-bottom: 15px;
+  align-items: center;
+}
+
+.country-prop {
+  display: inline;
+}
